[vishal]Mod: mofied and fix issue with address and review
